WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204321
http/tests/navigation/page-cache-mediastream.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=204321
Summary
http/tests/navigation/page-cache-mediastream.html is a flaky crash
Chris Dumez
Reported
2019-11-18 14:56:43 PST
http/tests/navigation/page-cache-mediastream.html is a flaky crash: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x0000000127159a7e WTFCrash + 14 (Assertions.cpp:305) 1 com.apple.WebCore 0x000000010e6c96fb WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x0000000110816057 WebCore::JSEventListener::jsFunction(WebCore::ScriptExecutionContext&) const + 439 (JSEventListener.h:109) 3 com.apple.WebCore 0x000000011081554d WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) + 205 (JSEventListener.cpp:113) 4 com.apple.WebCore 0x0000000110e363ed WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::DumbPtrTraits<WebCore::RegisteredEventListener> >, 1ul, WTF::CrashOnOverflow, 16ul>, WebCore::EventTarget::EventInvokePhase) + 925 (EventTarget.cpp:317) 5 com.apple.WebCore 0x0000000110e32684 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) + 356 (EventTarget.cpp:254) 6 com.apple.WebCore 0x0000000110e35fed WebCore::EventTarget::dispatchEvent(WebCore::Event&) + 333 (EventTarget.cpp:213) 7 com.apple.WebCore 0x00000001102e1ca5 void WebCore::ActiveDOMObject::queueTaskToDispatchEvent<WebCore::MediaStreamTrack, WebCore::Event>(WebCore::MediaStreamTrack&, WebCore::TaskSource, WTF::Ref<WebCore::Event, WTF::DumbPtrTraits<WebCore::Event> >&&)::'lambda'()::operator()() + 69 (ActiveDOMObject.h:130) 8 com.apple.WebCore 0x00000001102e1bbe WTF::Detail::CallableWrapper<void WebCore::ActiveDOMObject::queueTaskToDispatchEvent<WebCore::MediaStreamTrack, WebCore::Event>(WebCore::MediaStreamTrack&, WebCore::TaskSource, WTF::Ref<WebCore::Event, WTF::DumbPtrTraits<WebCore::Event> >&&)::'lambda'(), void>::call() + 30 (Function.h:52) 9 com.apple.WebCore 0x000000010e6d6d52 WTF::Function<void ()>::operator()() const + 130 (Function.h:79) 10 com.apple.WebCore 0x00000001102e120e void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::MediaStreamTrack>(WebCore::MediaStreamTrack&, WebCore::TaskSource, WTF::Function<void ()>&&)::'lambda'()::operator()() const + 30 (ActiveDOMObject.h:121) 11 com.apple.WebCore 0x00000001102e0f3e WTF::Detail::CallableWrapper<void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::MediaStreamTrack>(WebCore::MediaStreamTrack&, WebCore::TaskSource, WTF::Function<void ()>&&)::'lambda'(), void>::call() + 30 (Function.h:52) 12 com.apple.WebCore 0x000000010e6d6d52 WTF::Function<void ()>::operator()() const + 130 (Function.h:79) 13 com.apple.WebCore 0x0000000110f76e8e WebCore::WindowEventLoop::run() + 382 (WindowEventLoop.cpp:110) 14 com.apple.WebCore 0x0000000110f80b11 WebCore::WindowEventLoop::scheduleToRunIfNeeded()::$_3::operator()() const + 49 (WindowEventLoop.cpp:99) 15 com.apple.WebCore 0x0000000110f8098e WTF::Detail::CallableWrapper<WebCore::WindowEventLoop::scheduleToRunIfNeeded()::$_3, void>::call() + 30 (Function.h:52) 16 com.apple.JavaScriptCore 0x00000001271809c2 WTF::Function<void ()>::operator()() const + 130 (Function.h:79) 17 com.apple.JavaScriptCore 0x00000001271b8269 WTF::dispatchFunctionsFromMainThread() + 281 (MainThread.cpp:94) 18 com.apple.JavaScriptCore 0x00000001271bae21 WTF::timerFired(__CFRunLoopTimer*, void*) + 49 (MainThreadCocoa.mm:98)
Attachments
Patch
(1.51 KB, patch)
2019-11-18 14:58 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-11-18 14:58:46 PST
Created
attachment 383794
[details]
Patch
WebKit Commit Bot
Comment 2
2019-11-19 06:23:54 PST
Comment on
attachment 383794
[details]
Patch Clearing flags on attachment: 383794 Committed
r252626
: <
https://trac.webkit.org/changeset/252626
>
WebKit Commit Bot
Comment 3
2019-11-19 06:23:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-11-19 06:24:16 PST
<
rdar://problem/57320089
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug