http/tests/navigation/page-cache-mediastream.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=204321

Reviewed by Eric Carlson.

Make sure the MediaStreamTrack stays alive if there is a pending ended event to dispatch.

No new tests, covered by existing test.

* Modules/mediastream/MediaStreamTrack.cpp:
(WebCore::MediaStreamTrack::hasPendingActivity const):


Canonical link: https://commits.webkit.org/217620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252626 268f45cc-cd09-0410-ab3c-d52691b4dbfc